# lpfx

./: README.md  __init__.py  buttons.py  charset.py  config.py  controller.py  example.fx  gimmicks.py  main.py  metrics.fx  party.fx  party.py  pyproject.toml  readme.md  script_runner.py  scroll.py  setup.py  system.py
.github/workflows/: ci.yml
docs/: devices.md
effects/: animations.py  audio.py  gimmicks.py  scroll.py  system.py
lpfx/: constants.py
lpfx/effects/: audio.py
scripting/: script_runner.py
tests/: test_buttons.py  test_controller.py  test_effects.py
