[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lpfx"
version = "0.1.0"
description = "Launchpad FX – interactive LED controller and FX engine"
authors = [{ name = "Eetu Mäkinen" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["mido", "numpy", "sounddevice", "psutil"]